cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_113.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/idea/i_ecb.c:26: error: DEAD_STORE
  The value written to &in (type unsigned char const *) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/idea/i_ecb.c:26:5: Write of unused value
24.       n2l(in, l0);
25.       d[0] = l0;
26.       n2l(in, l1);
          ^
27.       d[1] = l1;
28.       IDEA_encrypt(d, ks);
